# Moving-from-C-to-Rust

./: README.md
chapter_06/: Cargo.toml  file.txt  pets.json
chapter_09/: README.md
chapter_09/bind_c_bindgen/: Cargo.toml  build.rs  wrapper.h
chapter_09/bind_c_bindgen/src/: main.rs
chapter_09/bind_c_manual/: Cargo.toml
chapter_09/bind_c_manual/src/: main.rs
chapter_09/bind_cpp_macros/: Cargo.toml  build.rs
chapter_09/bind_cpp_macros/src/: main.rs
chapter_09/bind_cpp_manual/: Cargo.toml  api.cpp  build.rs
chapter_09/bind_cpp_manual/src/: main.rs
chapter_09/from_c/: Cargo.toml  from_c.h  test.c
chapter_09/sdl_safe_wrapper/: Cargo.toml
chapter_09/sdl_safe_wrapper/src/: main.rs
chapter_10/: Cargo.toml
chapter_10/benches/: multiply.rs
chapter_10/src/: lib.rs  simd.rs
chapter_11/: Cargo.toml
chapter_12/: Cargo.toml
chapter_12/log_call/: Cargo.toml
chapter_12/log_call/src/: lib.rs
chapter_12/prettyprint_derive/: Cargo.toml
chapter_12/prettyprint_derive/src/: lib.rs
chapter_12/src/: main.rs
chapter_12/stringulate/: Cargo.toml
chapter_12/stringulate/src/: lib.rs
